--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -1,38 +1,44 @@
-/* The Modal (background) */
-.modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
-	left: 0;
+.modal-overlay-div {
+	position: fixed;
 	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-	background-color: #fefefe;
-	margin: auto;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 80%;
-  }
-  
-  /* The Close Button */
-  .close {
-	color: #aaaaaa;
-	float: right;
-	font-size: 28px;
-	font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-	color: #000;
-	text-decoration: none;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1000;
+	background-color: rgba(0, 0, 0, .65);
+}
+
+.modal-content-div {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 10000;
+	overflow: auto;
+	text-align: center;
+	padding: 4px;
 	cursor: pointer;
-  }
+}
+
+.modal-content-div:after {
+	vertical-align: middle;
+	display: inline-block;
+	height: 100%;
+	margin-left: -.05em;
+	content: '';
+}
+
+.modal-dialog-div {
+	position: relative;
+	outline: 0;
+	width: auto;
+	display: inline-block;
+	vertical-align: middle;
+	box-sizing: border-box;
+	max-width: auto;
+	cursor: default;
+	border-radius: 4px;
+}
