--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,7 @@ html, body {
 .navbar a:hover {
   background-color: #000;
   color: #ff7c00;
+  cursor: pointer;
 }
 
 .active {
@@ -103,6 +104,10 @@ html, body {
   background-color: rgb(185, 185, 185);
   overflow: auto;
   grid-area: b;
+}
+
+.image {
+  width: 60%;
 }
 
 .new-room-form {
@@ -194,7 +199,6 @@ html, body {
   width: 75%;
   height: 75%;
   background: var(--secondary-color);
-  padding: 15px 10px;
   margin: 0;
 }
 
