--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,13 @@ html, body {
   padding: 10px;
 }
 
+.currentUser {
+  float: left;
+  list-style: none;
+  padding-top: 10px;
+  font-size: 20px;
+}
+
 .navbar a {
   float: right;
   padding: 12px;
@@ -96,13 +103,27 @@ html, body {
   background-color: var(--main-color);
 }
 
+
+
 @media screen and (max-width: 500px) {
   .navbar a {
     float: none;
     display: block;
   }
   .chatBubble {
-    background-color: var(--secondary-text-color);
+    background-color: rgb(185, 185, 185);
+  }
+  .topnav #myLinks {
+    display: none;
+    width: 100%;
+  }
+  
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
   }
 }
 
@@ -111,7 +132,10 @@ html, body {
   background-color: rgb(185, 185, 185);
   overflow: auto;
   grid-area: b;
+  position: relative;
 }
+
+
 
 .image {
   width: 60%;
@@ -188,6 +212,13 @@ html, body {
   text-decoration: none;
 }
 
+.rooms-list .room a:hover {
+  color: var(--send-message-form);
+  font-weight: 600;
+  text-decoration: none;
+  
+}
+
 .new-room-form {
   padding: 0 5px;
   background: var(--secondary-color);
@@ -251,27 +282,27 @@ html, body {
 }
 
 .message .message-username {
-  font-size: 11px;
+  font-size: 13px;
   color: var(--main-text-color);
   opacity: 0.9;
   margin-bottom: 6px;
 }
 .message .message-text {
-  background: var(--main-text-color);
+  background: var(--main-color);
   color: var(--secondary-color);
   display: inline;
   padding: 4px 8px;
   border-radius: 8px;
 }
 
-.message .currentUser {
+/* .message .currentUser {
   background: var(--main-tcolor);
   color: var(--secondary-color);
   display: inline;
   padding: 4px 8px;
   border-radius: 8px;
   text-align: right;
-}
+} */
 
 .message-list {
   box-sizing: border-box;
