--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html, body {
   font-weight: 200;
   color: 	#575758; 
   text-align: center;
-  
+  margin-bottom: 100px;
   position: relative;
 }
 
@@ -33,6 +33,24 @@ html, body {
 
 .home p {
   font-size: 24px;
+}
+
+#about {
+  padding: 15px;
+}
+
+#about:hover {
+  color: var(--main-color);
+}
+
+#demo {
+  background-color: rgb(185, 185, 185);
+  color: var(--send-message-form);
+  padding: 15px;
+}
+
+#demo:hover {
+  color: var(--main-color);
 }
 
 .register:hover {
