--- a/src/index.css
+++ b/src/index.css
@@ -228,7 +228,7 @@ html, body {
       "r m m m m m"
       "r m m m m m"
       "r m m m m m"
-      "r t t t t t"
+      "r m m m m m"
       "n f f f f f";
 }
 
