users online added plus css update

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,48 @@ html, body {
 #demo:hover {
   color: var(--main-color);
 }
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
 .register {
   color: #666;
 }
@@ -215,13 +257,15 @@ html, body {
 
 .new-room-form:hover, .send-message-form:hover {
   border: 1px solid var(--main-color);
+  background-color: var(--main-text-color);
+  color: var(--secondary-text-color);
 }
 @media screen and (min-width: 601px) {
 .dashboard{
   display: grid;
   height: 100%;
   text-align: left;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(6);
   /* grid-template-rows:  60px; */
   grid-template-areas: 
       "r m m m m m"
@@ -321,7 +365,7 @@ html, body {
   background: var(--secondary-color);
   color: var(--main-text-color);
   border: 0;
-  width: 25%;  
+  width: 10%;  
   height: 80%;
   padding: 15px 10px;
   margin: 0;
@@ -329,9 +373,9 @@ html, body {
 
 .new-room-form button:hover {
   background: var(--main-color);
-  border: 0;
+  color: white;
   border-radius: 10px;
-  width: 25%;  
+  width: 10%;  
   height: 80%;
   padding: 15px 10px;
   margin: 0;
